# firefox-session-ui-iced

./: .gitignore  Cargo.toml  Readme.md  Trunk.yaml  build.rs  trunk.html
.cargo/: config.toml
.github/workflows/: deploy-pages.yml  release.yml
icons/: iced-logo-source.txt
icons/icon-designer.microsoft.com-image-creator/: to-ico.bat
src/: host.rs  main.rs  wizard.rs
